--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,6 +2,7 @@ h1 {
   color: #feea01;
   font-size: 100px;
   text-align: center;
+  font-family: "verdana";
 }
 
 img {
@@ -18,6 +19,7 @@ p {
   color: #feea01;
   text-align: center;
   font-size: 20px;
+  font-family: "verdana";
 }
 
 hr {
