--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -26,6 +26,6 @@ hr {
   border-color: #feea01;
   border-style: dotted;
   border-left: none;
-  border-top: none;
-  border-width: 20px;
+  border-width: 15px;
+  width: 60%  
 }
